--- a/Bbompage/2_gallery.html
+++ b/Bbompage/2_gallery.html
@@ -1,5 +1,4 @@
 <!-- 
-+ 섹션별 img 추가
 + 라이트박스 도오전하기
  -->
 
@@ -37,6 +36,7 @@
             display: flex;
             justify-content: center;
         }
+        
          nav .items {
             display: flex;
             max-width: 1100px;
@@ -185,24 +185,29 @@
              </div>
              <!-- 갤러리 이미지 -->
              <div class="image-container">
+                 <div class="image" data-name="kevin"><img src="https://i.pinimg.com/564x/1b/3f/d2/1b3fd24785d06119cb27a23b08ece135.jpg" alt=""></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys1.jpg" alt="영선"></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn1.jpg" alt="혜린"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj1.jpeg" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh1.jpg" alt="정현"></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys10.jpg" alt="영선"></div>
                  <div class="image" data-name="개똥이"><img src="images/img1.jpg" alt=""></div>
+                 <div class="image" data-name="kevin"><img src="https://i.pinimg.com/564x/bf/23/a7/bf23a7e3b3b4466b8dcf1b235546f068.jpg" alt=""></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn2.jpg" alt="혜린"></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys2.jpg" alt="영선"></div>
                  <div class="image" data-name="개똥이"><img src="images/img2.jpg" alt=""></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn3.jpg" alt="혜린"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj2.jpeg" alt="명진"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj3.png" alt="명진"></div>
+                 <div class="image" data-name="kevin"><img src="https://i.pinimg.com/564x/89/87/c9/8987c942bba175acb512297b7168812f.jpg" alt=""></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys3.jpg" alt="영선"></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys4.jpg" alt="영선"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh2.jpg" alt="정현"></div>
                  <div class="image" data-name="개똥이"><img src="images/img3.jpg" alt=""></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn4.jpg" alt="혜린"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj4.jpg" alt="명진"></div>
+                 <div class="image" data-name="kevin"><img src="https://i.pinimg.com/564x/fa/e7/57/fae757c8538f14b3190357653db5e00e.jpg" alt=""></div>
+                 <div class="image" data-name="후아유"><img src="https://i.pinimg.com/236x/f7/14/6f/f7146f376d4c1ed5c634b2b76c74dfb4.jpg"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh3.jpg" alt="정현"></div>
                  <div class="image" data-name="후아유"><img src="images/img4.jpg" alt=""></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj5.jpg" alt="명진"></div>
@@ -213,28 +218,35 @@
                  <div class="image" data-name="김영선"><img src="images/photo_ys5.jpg" alt="영선"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh5.jpg" alt="정현"></div>
                  <div class="image" data-name="아무나"><img src="images/img6.jpg" alt=""></div>
+                 <div class="image" data-name="후아유"><img src="https://i.pinimg.com/236x/b1/88/1d/b1881d33321327bb3ff6df52d208387e.jpg"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj6.jpeg" alt="명진"></div>
                  <div class="image" data-name="개똥이"><img src="images/img7.jpg" alt=""></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys6.jpg" alt="영선"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh6.jpg" alt="정현"></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn7.jpg" alt="혜린"></div>
                  <div class="image" data-name="길동이"><img src="images/img8.jpg" alt=""></div>
+                 <div class="image" data-name="kevin"><img src="https://i.pinimg.com/564x/db/15/94/db15940b82f7f1196a544ce07227088a.jpg" alt=""></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj10.jpeg" alt="명진"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh7.jpg" alt="정현"></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys7.jpg" alt="영선"></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn8.jpg" alt="혜린"></div>
                  <div class="image" data-name="길동이"><img src="images/img9.jpg" alt=""></div>
+                 <div class="image" data-name="개똥이"><img src="https://i.pinimg.com/236x/f5/54/a9/f554a9b8573ccf03b4c60e6df2f2cb83.jpg" alt=""></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj7.jpeg" alt="명진"></div>
+                 <div class="image" data-name="개똥이"><img src="https://i.pinimg.com/236x/b1/ee/3e/b1ee3e24b552b28261c1328d95665817.jpg"></div>
                  <div class="image" data-name="후아유"><img src="images/img10.jpg" alt=""></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys8.jpg" alt="영선"></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn9.jpg" alt="혜린"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh8.jpg" alt="정현"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj8.jpeg" alt="명진"></div>
+                 <div class="image" data-name="아무개"><img src="https://i.pinimg.com/736x/4d/3c/7d/4d3c7da216d262e78f5ec5a3198c99ad.jpg" alt=""></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh9.jpg" alt="정현"></div>
                  <div class="image" data-name="김영선"><img src="images/photo_ys9.jpg" alt="영선"></div>
                  <div class="image" data-name="박혜린"><img src="images/photo_lynn10.jpg" alt="혜린"></div>
                  <div class="image" data-name="이정현"><img src="images/photo_jh10.jpg" alt="정현"></div>
                  <div class="image" data-name="이명진"><img src="images/mj_photo/photo_mj9.jpg" alt="명진"></div>
+                 <div class="image" data-name="아무나"><img src="https://i.pinimg.com/564x/41/f6/44/41f644a82b6393b294a45b7f3750e14a.jpg"></div>
+                 <div class="image" data-name="후아유"><img src="https://i.pinimg.com/236x/79/13/0e/79130e635a9412d8fbabe570bf1d269b.jpg"></div>
              </div>
              
              <script src="script.js"></script>
