--- a/Bbompage/upload.html
+++ b/Bbompage/upload.html
@@ -20,6 +20,11 @@
       #upload {
         margin-top: 100px;
       }
+      /* 중앙에 위치 */
+      #file {
+        padding-bottom: 14%;
+      }
+
     </style>
   </head>
 
@@ -44,7 +49,7 @@
               />
             </div>
             <div class="form-group">
-              <input type="file" class="form-control" />
+              <input id="file" type="file" class="form-control" />
             </div>
             <!-- submit 버튼 생성 -->
             <button type="submit" class="btn btn-danger">> Upload</button>
