--- a/Bbompage/2_gallery.html
+++ b/Bbompage/2_gallery.html
@@ -139,28 +139,30 @@
             }
         }
  
-         /* hover */
+         /* hover : shade, zoomIn*/
          .image img:hover {
              filter:brightness(80%);
+             transform: scale(1.05);
  
         }
- 
+
+
          /* paper 스타일 */
 
-/* modal */
+         /* lightbox modal */
          .container .popup-image {
             position: fixed;
             top:0; left:0;
-            background: rgba(0,0,0,0.9);
+            background: rgba(0,0,0,0.8);
             height:100%;
             width:100%;
             display: none;
          }
          .container .popup-image span{
             position: absolute;
-            top:0; right:10px;
-            font-size: 40px;
-            font-weight: bolder;
+            top:10px; right:30px;
+            font-size: 35px;
+            font-weight: lighter;
             color:#fff;
             cursor:pointer;
             z-index: 100;
@@ -169,10 +171,10 @@
             position: absolute;
             top:50%;left:50%;
             transform: translate(-50%, -50%);
-            border: 5px solid #fff;
-            border-radius: 5px;
+            border: 0px solid #fff;
+            border-radius: 3px;
             width: 750px;
-            object-fit: cover;
+            object-fit:cover;
          }
 
          @media (max-width:768px){
@@ -180,11 +182,6 @@
                 width:95%;
             }
          }
-
-
- 
-         
-         
      </style>
  
  
