gallery hover cursor : pointer

--- a/Bbompage/2_gallery.html
+++ b/Bbompage/2_gallery.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>gallery</title>
+     <title>Gallery</title>
      <style>
          /* 폰트 불러와서 적용 */
          @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
@@ -139,10 +139,12 @@
             }
         }
  
-         /* hover : shade, zoomIn*/
+         /* hover : shade, zoomIn, cursor*/
          .image img:hover {
              filter:brightness(80%);
              transform: scale(1.05);
+             cursor: pointer;
+
  
         }
 
