--- a/Bbompage_yellow/0_landingpage.html
+++ b/Bbompage_yellow/0_landingpage.html
@@ -50,7 +50,7 @@
         <!-- 프로필 css에서 프사 바깥 동그라미 컬러 변경 -->
         <!-- 프로필 css 배경 컬러 변경 -->
         <img src="kevin.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Kevin Park</a></h1>
+        <h1 class="text-light"><a href="index.html">Captain Kevin</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- 소셜 컬러, 호버 컬러 변경 -->
           <!-- 폰트 어썸 > 구글 드라이브, 깃허브, 메일-->
