--- a/Bbompage_yellow/0_landingpage.html
+++ b/Bbompage_yellow/0_landingpage.html
@@ -80,7 +80,9 @@
           <br>
           <br>
           <!-- 로그인 연결-->
-          <li><a href="./login.html" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Sign in</span></a></li>
+          <li><a href="./signup.html" i class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Sign in</span></a></li>
+          
+        
         </ul>
       </nav><!-- .nav-menu -->
     </div>
