--- a/Bbompage_yellow/joinmodal.html
+++ b/Bbompage_yellow/joinmodal.html
@@ -11,12 +11,12 @@
     <script src="https://kit.fontawesome.com/220bfd6950.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <br>
+    <!-- <br>
     <div class="container">
       <!-- Button trigger modal -->
-      <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">
+      <!-- <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#loginModal">
         > Sign in
-      </button>
+      </button> --> -->
 
       <!-- Modal -->
       <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
@@ -34,7 +34,7 @@
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <!-- signup link 지정 -->
-              <a button type="button" href="./signup.html" class="btn btn-danger">Continue</button></a>
+              <a href="./signup.html" button type="button" class="btn btn-outline-warning">Continue</button></a>
             </div>
           </div>
         </div>
