--- a/Bbompage_yellow/login.html
+++ b/Bbompage_yellow/login.html
@@ -49,7 +49,7 @@
               />
             </div>
             <!-- submit 버튼 생성 -->
-            <button type="submit" class="btn btn-danger">> Log in</button>
+            <button type="submit" class="btn btn-outline-warning">> Log in</button>
           </form>
         </div>
       </div>
