--- a/Bbompage_yellow/signup.html
+++ b/Bbompage_yellow/signup.html
@@ -72,7 +72,7 @@
                 >저는 만 14세 이상입니다.</label
               >
             </div>
-            <button type="submit" class="btn btn-danger">> Sign up</button>
+            <button type="submit" class="btn btn-outline-warning">> Sign up</button>
           </form>
         </div>
       </div>
