--- a/Bbompage_yellow/upload.html
+++ b/Bbompage_yellow/upload.html
@@ -52,7 +52,7 @@
               <input id="file" type="file" class="form-control" />
             </div>
             <!-- submit 버튼 생성 -->
-            <button type="submit" class="btn btn-danger">> Upload</button>
+            <button type="submit" class="btn btn-outline-warning">> Upload</button>
           </form>
         </div>
       </div>
